...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tv_catalog_header"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="8dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_album" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
...
